[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous vision-language research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "Pillow>=10.0.0",
    "requests>=2.32.0",
    "tiktoken>=0.11.0",
    "torch==2.6.0",
    "torchvision>=0.21.0",
]
